Fix Codex CLI args and make CLI arguments configurable
- Fix Codex to use 'exec' subcommand instead of invalid '--quiet' flag
- Add configurable CLI args fields for Claude and Codex in settings
- Remove error display from search results panel (only show in log)